--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.6",
     "@types/js-cookie": "^3.0.6",
     "antd": "^5.23.1",
     "axios": "^1.7.9",
+    "graphql": "^16.10.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
