--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.23.1",
     "axios": "^1.7.9",
     "graphql": "^16.10.0",
+    "graphql-tag": "^2.12.6",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -31,6 +32,7 @@
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-graphql-loader": "^4.0.4"
   }
 }
